syntax = "proto3";

package user;

option go_package = "./user";

message IdReq{
  int64 id = 1;
}

message UserInfoReply{
  int64 id = 1;
  string mobile = 2;
  string nikename = 3;
}

service user {
  rpc getUser(IdReq) returns(UserInfoReply);
}